修改了下订阅和关注逻辑，改为双向